--- a/config.env
+++ b/config.env
@@ -1,5 +1,8 @@
 NODE_ENV=development
-PORT=8000
+PORT=3000
 DATABASE=mongodb+srv://prasanth:<PASSWORD>@cluster0.jrp7r.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=jR6m932pxfqGVdWc
+
+JWT_SECRET=my-very-long-long-secret-code-for-auth
+JWT_EXPRIES_IN = 1d
